# roguelike

./: Cargo.toml  README.md
src/: camera.rs  chunk.rs  chunk_renderer.rs  color.rs  deprecated_renderer.rs  ecs.rs  entity.rs  error.rs  game_renderer.rs  light.rs  main.rs  map.rs  material.rs  player.rs  renderer.rs  rendering_context.rs  state.rs  tile.rs  time.rs  vector2.rs  world.rs
src/graphics/: chunk_renderer.rs  entity_renderer.rs  light_renderer.rs  mod.rs
src/graphics/shaders/: chunk.wgsl  fs_entity.wgsl  fs_tile.wgsl
src/shaders/: chunk.wgsl  chunk_raw.wgsl  entity.wgsl  fs_chunk.wgsl  game.wgsl  game_view.wgsl  light.wgsl  lighting.wgsl  vs_quad.wgsl
