[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.7.2", features = ["derive"] }
chrono = "0.4.19"
env_logger = "0.9.0"
image = "0.23.14"
itertools = "0.10.1"
log = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.10.0", features = ["full"] }
wgpu = "0.11.0"
winit = "0.25.0"
