[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
chrono = "0.4.19"
env_logger = "0.9.0"
image = "0.23.14"
itertools = "0.10.3"
log = "0.4.14"
num-traits = "0.2.14"
num-derive = "0.3.3"
serde = { version = "1.0.134", features = ["derive"] }
serde_json = "1.0.75"
tokio = { version = "1.15.0", features = ["full"] }
wgpu = "0.12.0"
winit = "0.26.1"
