[package]
name = "roguelike"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.9.0", features = ["derive"] }
image = "0.24.1"
itertools = "0.10.3"
num-traits = "0.2.14"
num-derive = "0.3.3"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
wgpu = "0.12.0"
winit = "0.26.1"
tracing = "0.1.32"
rendering_util = { git = "https://github.com/chaynabors/rendering_util" }
gilrs = "0.8.2"
tracing-subscriber = "0.3.10"
enum-iterator = "0.7.0"
